# grinder_touch

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.sh  entry_points.ini  pyproject.toml  requirements.txt  settings.cxx  setup.py
.devcontainer/: Dockerfile  devcontainer.json  linuxcnc.list
config/: .gitignore  .grinder.py.swp  autosave.halscope  client.nml  dark.qss  edit.sh  grinder-arm64.hal  grinder-sim.hal  grinder-sim.ini  grinder-x86.hal  grinder.hal  grinder.nml  grinder.py  grinder_backend  grinder_backend-arm64  grinder_backend-x64  grinder_postgui.hal  grinder_settings.json  grinder_touch.ui  halshow.preferences  mdi_history.txt  mill_3_touch.qss  positions.txt  postgui.hal  postgui_call_list.hal  preview.sh  rmill_3.qss  sim.hal  sim_hardware.hal  startsim.sh  tool.tbl  touch.qrc  touch.qss
config/cpp/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  CROSS_COMPILATION.md  README.md  arm64-toolchain.cmake  backward.cpp  backward.hpp  build.sh  emcmodule.cpp  grinder-backend.cpp  grinder-backend.cppold  grinder-backend.cxx  grinder-backend.hxx  grinder_backend  grinder_gui.cxx  grinder_gui.hxx  grinder_gui_main.cxx  grinder_motion.cxx  grinder_motion.hxx  grinder_motion_gui.cxx  grinder_motion_gui.hxx  grinder_touch.pro  grinder_touch.ui  gui_events.cxx  gui_events.hxx  ini_modifications.txt  install-cross-deps.sh  main.cxx  pins.hxx  settings.cxx  settings.hxx  shcom.cc  shcom.hh  status.hxx
config/cpp/linuxcnc/: hal.cxx  hal.hxx  machine.cxx  machine.hxx  shcom.cc  status.hxx
config/m_codes/: M101  M102
config/python/: axis.py  grinder-backend.py  grinderhal.py  remap.py  statexplore.py
config/subroutines/: disable_at_z_limit.ngc  dress_angle.ngc  dress_radius.ngc  test.ngc  xmove_to_max.ngc  xmove_to_min.ngc  zmove_repeattype0.ngc  zmove_repeattype1.ngc  zmove_repeattype2.ngc
configs/grinder_touch_sim/: grinder_touch.ini
debian/: changelog  control  copyright  debhelper-build-stamp  pybuild.cfg  rules  semiauto-sg.install
debian/python3-grinder-touch/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/python3-grinder-touch/usr/lib/python3/dist-packages/grinder_touch/: mainwindow.py  mainwindow.ui  mainwindow_ui.py
debian/python3-grinder-touch/usr/lib/python3/dist-packages/grinder_touch-0.0.dist-info/: METADATA  RECORD  entry_points.txt
debian/python3-grinder-touch/usr/lib/python3/dist-packages/widgets/mk_dro/: mk_dro_ui.py
debian/python3-semiauto-surfacegrinder/DEBIAN/: control  md5sums  postinst  prerm
debian/python3-semiauto-surfacegrinder/usr/lib/python3/dist-packages/semiauto_surfacegrinder/: config.yml  mainwindow.py  mainwindow.sg-pane_ui.py  mainwindow.ui  mainwindow_ui.py
debian/python3-semiauto-surfacegrinder/usr/lib/python3/dist-packages/semiauto_surfacegrinder-0.0.dist-info/: METADATA  RECORD  entry_points.txt
debian/python3-semiauto-surfacegrinder/usr/lib/python3/dist-packages/semiauto_surfacegrinder/sass/: style.scss
debian/python3-semiauto-surfacegrinder/usr/lib/python3/dist-packages/widgets/mk_dro/: mk_dro_ui.py
debian/python3-semiauto-surfacegrinder/usr/share/doc/python3-semiauto-surfacegrinder/: copyright
linuxcnc/sim.sg_cnc/: sg_cnc.ini
linuxcnc/sim.sg_cnc/hallib/: sg_ui.hal  surface_grinder.hal
rpi_grinder_touch/: .gitignore  GrinderCommon.py  grinder-backend.py  grinder.clp  grinder.hal  grinder.pkl  grinder.py  halshow.preferences  mainwindow.py  mdi_history.txt  postgui_rpi_mill_3.hal  process.py  rpi_grinder_touch.ini  rpi_grinder_touch.ui  rpi_mill_3.ini  sim.hal
rpi_grinder_touch/m_codes/: M100
rpi_grinder_touch/python/: axis.py  grinder-backend.py  grinderhal.py  toplevel.py
rpi_grinder_touch/subroutines/: Disable_At_Z_Limit.ngc  Flat_Grind.ngc  XMove_To_Max.ngc  XMove_To_Min.ngc  YDownfeed.ngc  ZMove_RepeatType0.ngc  ZMove_RepeatType1.ngc  ZMove_RepeatType2.ngc  disable_at_z_limit.ngc  flat_grind.ngc  test.ngc  test.output  xmove_to_max.ngc  xmove_to_min.ngc  ydownfeed.ngc  zmove_repeattype0.ngc  zmove_repeattype1.ngc  zmove_repeattype2.ngc
semiauto_sg/: __init__.py
semiauto_sg/sg/: __init__.py  config.yml  mainwindow copy 2.py  mainwindow.py  mainwindow.ui  test.py
sg_cnc/sg/: config.yml  mainwindow.py  mainwindow.ui  style.qss
src/grinder_touch/: __init__.py  config.yml  mainwindow.py  mainwindow.sg-pane.ui  mainwindow.ui  mainwindow.ui-vkt
src/rpi_grinder_touch/: grinder.hal  mainwindow.py  rpi_mill_3.ui
src/semiauto_surfacegrinder/: __init__.py  mainwindow.py  mainwindow.ui
