[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grinder_touch"
authors = [
  "Chris Chatelain <digiex_chris@digiex.ca>",
]
description = "semiauto - Semi-automatic surface grinder interface similar to hydraulic grinders, but with extra functionality"
readme = "README.md"
version = "0.0"

packages = [
	{ include = "grinder_touch", from = "src" },
	{ include = "widgets", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
grinder_touch = "grinder_touch:main"

[tool.poetry.plugins]

[tool.poetry.plugins."qtpyvcp.vcp"]
grinder_touch = "grinder_touch"

[tool.poetry.plugins."qtpyvcp.widgets"]
semiauto_widgets = "widgets"